--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
+        
         <activity
             android:name="com.example.secrettalk5.MainActivity"
             android:label="@string/app_name" >
@@ -36,6 +38,8 @@
             android:icon="@drawable/ic_launcher"
             >
         </activity>
+        
     </application>
+    
 
 </manifest>
