--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,22 +7,22 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <!-- Use Internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
-        
         <activity
             android:name="com.example.secrettalk5.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+          
         </activity>
         <activity
             android:name="com.example.secrettalk5.Setting_MyFragment"
@@ -34,12 +34,18 @@
         </activity>
         <activity
             android:name="com.example.secrettalk5.AboutProgram"
-            android:label="@string/aboutprogram" 
             android:icon="@drawable/ic_launcher"
-            >
+            android:label="@string/aboutprogram" >
         </activity>
-        
+        <activity
+            android:name="com.example.secrettalk5.LoginActivity"
+            android:label="@string/title_activity_login" >
+              <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
-    
 
 </manifest>
