--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,6 @@
         <activity
             android:name="com.example.secrettalk5.MainActivity"
             android:label="@string/app_name" >
-          
         </activity>
         <activity
             android:name="com.example.secrettalk5.Setting_MyFragment"
@@ -40,11 +39,15 @@
         <activity
             android:name="com.example.secrettalk5.LoginActivity"
             android:label="@string/title_activity_login" >
-              <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.secrettalk5.RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
     </application>
 
