--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,18 +13,28 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+       >
         
-        <activity
-            android:name="com.example.secrettalk5.MainActivity"
-            android:label="@string/app_name" >
-            
+        <activity android:name="Begin_Prefence_Register_Anim" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.example.secrettalk5.MainActivity"
+            android:label="@string/app_name" >
+            
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
+        </activity>
+        
         <activity
             android:name="com.example.secrettalk5.Setting_MyFragment"
             android:label="@string/title_activity_setting_my_fragment" >
@@ -39,6 +49,9 @@
             android:icon="@drawable/ic_launcher"
             >
         </activity>
+       
+        
+        
         
     </application>
     
