--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,13 +22,21 @@
        >
         
         <activity android:name="Begin_Prefence_Register_Anim" >
+            
+        </activity>
+        <activity
+            android:name="com.example.secrettalk5.LoginActivity"
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+		</activity>
+		 <activity
+            android:name="com.example.secrettalk5.RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
-        
         <activity
             android:name="com.example.secrettalk5.MainActivity"
             android:label="@string/app_name" >
