--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
        >
         
-        <activity android:name="Begin_Prefence_Register_Anim" >
+        <activity android:name="Begin_Prefence_Register_Anim"
+            	  android:screenOrientation="portrait"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +27,8 @@
         
         <activity
             android:name="com.example.secrettalk5.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
             
             <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,21 +39,20 @@
         
         <activity
             android:name="com.example.secrettalk5.Setting_MyFragment"
-            android:label="@string/title_activity_setting_my_fragment" >
+            android:label="@string/title_activity_setting_my_fragment"
+            android:screenOrientation="portrait"  >
         </activity>
         <activity
             android:name="com.example.secrettalk5.Listening_MyFragment"
-            android:label="@string/title_activity_listening_my_fragment" >
+            android:label="@string/title_activity_listening_my_fragment"
+            android:screenOrientation="portrait"  >
         </activity>
         <activity
             android:name="com.example.secrettalk5.AboutProgram"
             android:label="@string/aboutprogram" 
             android:icon="@drawable/ic_launcher"
-            >
+            android:screenOrientation="portrait" >
         </activity>
-       
-        
-        
         
     </application>
     
