--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,32 +3,32 @@
     package="com.example.secrettalk5"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
-
-    <uses-permission android:name="android.permission.VIBRATE" />
-
-    <!-- Use Internet -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-       >
-        <activity android:name="Begin_Prefence_Register_Anim"
-            	  android:screenOrientation="portrait"  >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
+        
+        
+        <activity android:name="com.example.secrettalk5.Begin_Prefence_Register_Anim"
+            	  android:screenOrientation="portrait"  
+            	  >
+         	<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 		</activity>
-		 <activity
+		
+		<activity
             android:name="com.example.secrettalk5.RegisterActivity"
             android:label="@string/title_activity_register"
             android:screenOrientation="portrait" >
@@ -37,12 +37,6 @@
             android:name="com.example.secrettalk5.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"  >
-            
-            <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> -->
         </activity>
         
         <activity
@@ -71,6 +65,13 @@
             android:screenOrientation="portrait"
              >
 		</activity>
+  		<activity 
+           android:name="com.example.secrettalk5.CheckLicense"  
+           android:label= "SecretTalk"
+           android:launchMode="standard"   
+           >
+           
+        </activity>
     </application>
 
 </manifest>
