--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Vicky/Downloads/HamiApps_SDK_Current/Hami_Apps_SDK_20110628/Hami_Apps_SDK_Dev_V1.06_20110621.jar"/>
+	<classpathentry kind="lib" path="libs/Hami_Apps_SDK_V1.06_20110621.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
