--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../../workspace/appcompat_v7
+android.library.reference.1=../appcompat_v7
 
